--- a/src/app/front-office/product/product-list/product-list.component.html
+++ b/src/app/front-office/product/product-list/product-list.component.html
@@ -3,8 +3,11 @@
      <h3 class="title text-center mb-lg-5 mb-md-4 mb-sm-4 mb-3">Products Shop</h3>
      <div class="row">
        <div class="side-bar col-lg-3">
-        <app-sidebar (salut)="getproduitsBycat($event)" (prixselected)= "getproduitsByprix($event)" (libelleSearched)="getProductBylibelle($event)"></app-sidebar>
-       </div>
+<!--         <app-sidebar (salut)="getproduitsBycat($event)" (prixselected)= "getproduitsByprix($event)" (libelleSearched)="getProductBylibelle($event)"></app-sidebar>
+ -->       
+        <app-sidebar (produitsearch)="serach($event)" ></app-sidebar>
+
+</div>
         <div class="left-ads-display col-lg-9">
            <div class="row">
          
@@ -13,10 +16,11 @@
                   <div class="product-toys-info">
                      <div class="men-pro-item">
                         <div class="men-thumb-item">
-                           <img src="../../assets/images/p1.jpg" class="img-thumbnail img-fluid" alt="">
+                         
+                           <img [src]="retrievedImagetab[p.idProduit]" class="img-thumbnail img-fluid" alt="">
                            <div class="men-cart-pro">
                               <div class="inner-men-cart-pro">
-                                 <a (click)="getid(p.idProduit)" href="javascript:void()" data-toggle="modal" data-target="#personal-details" class="link-product-add-cart">{{p.code}}</a>
+                                 <a [routerLink]="['/home/product/detailProduct', p.idProduit]" class="link-product-add-cart">{{p.code}}</a>
                               </div>
                            </div>
                            <span class="product-new-top">New</span>
@@ -24,37 +28,44 @@
                         <div class="item-info-product">
                            <div class="info-product-price">
                               <div class="grid_meta">
+                                
                                  <div class="product_price">
+                                   
                                     <h4>
+                                       {{p.NoteMoyenne}}
                                        <a href="single.html">{{p.libelle}}</a>
+                                                          
                                     </h4>
                                     <div class="grid-price mt-2">
                                        <span class="money ">{{p.prixUnitaire}}</span>
                                     </div>
+
+                                    
+                                    
                                  </div>
                                  <ul class="stars">
                                     <li>
-                                       <a href="#">
+                                       <a  data-bs-toggle="modal" data-bs-target="#staticBackdrop" [routerLink]="['/home/product']" routerLinkActive="router-link-active"  (click)="affecterNote(p.idProduit,1)">
                                        <i class="fas fa-star"></i>
                                        </a>
                                     </li>
                                     <li>
-                                       <a href="#">
+                                       <a  data-bs-toggle="modal" data-bs-target="#staticBackdrop" [routerLink]="['/home/product']" routerLinkActive="router-link-active"  (click)="affecterNote(p.idProduit,2)">
                                        <i class="fas fa-star"></i>
                                        </a>
                                     </li>
                                     <li>
-                                       <a href="#">
+                                       <a  data-bs-toggle="modal" data-bs-target="#staticBackdrop" [routerLink]="['/home/product']" routerLinkActive="router-link-active"  (click)="affecterNote(p.idProduit,3)">
                                        <i class="fas fa-star"></i>
                                        </a>
                                     </li>
                                     <li>
-                                       <a href="#">
+                                       <a  data-bs-toggle="modal" data-bs-target="#staticBackdrop" [routerLink]="['/home/product']" routerLinkActive="router-link-active"  (click)="affecterNote(p.idProduit,4)">
                                        <i class="fas fa-star" ></i>
                                        </a>
                                     </li>
                                     <li>
-                                       <a href="#">
+                                       <a  data-bs-toggle="modal" data-bs-target="#staticBackdrop" [routerLink]="['/home/product']" routerLinkActive="router-link-active"  (click)="affecterNote(p.idProduit,5)">
                                        <i class="far fa-star-half-o"></i>
                                        </a>
                                     </li>
@@ -86,9 +97,29 @@
   </div>
 </section>
 
-<div class="modal fade" id="personal-details" role="dialog">
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+   <div class="modal-dialog">
+     <div class="modal-content">
+       <div class="modal-header">
+         <h5 class="modal-title" id="staticBackdropLabel">Gestion Note</h5>
+         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+       </div>
+       <div class="modal-body">
+       Note ajouter avec succés pour le produit 
+
+       Voulez vous ajouter un commentaire sur la qualité de notre produit ?
+<br><input type="text" value="" #commentaire/>
+      </div>
+       <div class="modal-footer">
+         <button  type="button"  class="btn btn-success"  (click)="Ajouternote(commentaire.value)"   data-bs-dismiss="modal">Ok</button>
+       </div>
+     </div>
+   </div>
+ </div>
+
+<!-- <div class="modal fade" id="personal-details" role="dialog">
    <div class="modal-dialog">        
-     <!-- Modal content-->
+     Modal content
      <div class="modal-content">           
        <div class="modal-body"> 
          <link rel="stylesheet" href="https://allyoucan.cloud/cdn/icofont/1.0.1/icofont.css" integrity="sha384-jbCTJB16Q17718YM9U22iJkhuGbS0Gd2LjaWb4YJEZToOPmnKDjySVa323U+W7Fv" crossorigin="anonymous">
@@ -130,11 +161,11 @@
             
              </div>
          </div>
-    <!--  Prix: {{p.prixUnitaire}} -->
+   
        </div>
      </div>
    </div>
-</div>
+</div> -->
 <!--  
 <li><a href="javascript:void()" data-toggle="modal" data-target="#personal-details">user 1</a></li>
 <li><a href="javascript:void()" data-toggle="modal" data-target="#personal-details">user 2</a></li>...
