--- a/src/app/back-office/rayon/rayon-list/rayon-list.component.css
+++ b/src/app/back-office/rayon/rayon-list/rayon-list.component.css
@@ -1,25 +1,43 @@
+.card {
+  min-height: 16rem;
+}
+.btn {
+  padding: 1 !important;
+}
 .RayonVide {
   color: white;
 }
-.fontWeight
-{
+.fontWeight {
   font-weight: 700;
   color: red;
 }
-.card{
-  min-height: 15rem;
+.sortSection {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 0 0;
 }
-#productListButton
-{
-  position: absolute;
-  bottom: 1rem !important;
+.sortSection h5 {
+  margin: 0 0;
 }
-.fontWeight
-{
-  font-weight: 700;
-  color: red;
+.sortItem i {
+  color: #0858d8cf;
+  cursor: pointer;
+  margin: 0 0.5rem 0 0;
+  transition: ease-in-out 0.2s;
+  font-size: 1rem;
 }
-
-.btn{
-  padding: 1!important;
+.sortItem i:hover {
+  color: #0c0093;
+}
+@media screen and (max-width: 1199px) {
+  .sortSection {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .sortSection h5 {
+    margin: 0.3rem 1rem;
+  }
 }
