--- a/src/app/back-office/product-back/detail-product-back/detail-product-back.component.html
+++ b/src/app/back-office/product-back/detail-product-back/detail-product-back.component.html
@@ -9,7 +9,7 @@ class="card"
 
 </div>
 <div style="margin-top: -1.5rem;" class="card-body">
-  <img [src]="retrievedImagetab[p.idProduit]"  alt="...">
+  <img [src]="retrievedImagetab[p.idProduit]"  alt="..."/>
   <h3 style="font-weight: 700">Id Produit: {{ p.idProduit}}</h3>
   <h6 style="font-weight: 600">Libelle : {{ p.libelle }}</h6>
   <h6 style="font-weight: 600">Code : {{ p.code }}</h6>
