fixed dashboard links

--- a/src/app/back-office/sidebar/sidebar.component.html
+++ b/src/app/back-office/sidebar/sidebar.component.html
@@ -42,19 +42,27 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a [routerLink]="['/back/assginProductTorayon']" href="pages/mailbox/mailbox.html" class="nav-link">
+                <a [routerLink]="['/back/product/assginProductTorayon']"  class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Affecter un produit pour un rayon</p>
+                  <p>Charte revenu brut</p>
                 </a>
               </li>
             </ul>
        </li>
-             <li  class="nav-item ml-1">
+             
               <li  class="nav-item ml-2">
                 <a [routerLink]="['/back/user/addadmin']" class="nav-link">
                   <i class="fas fa-road"></i>
                   <p>
                     Users 
+                  </p>
+                </a>
+              </li>
+              <li  class="nav-item ml-2">
+                <a [routerLink]="['/back/user/chart']" class="nav-link">
+                  <i class="fas fa-road"></i>
+                  <p>
+                   Charte categorie clients
                   </p>
                 </a>
               </li>
